# synergy-core

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml
.github/: FUNDING.yml
.github/actions/build-number/: action.yml  package-lock.json  package.json
.github/workflows/: create-build.yml  job-build-mac-10.13.yaml  job-build-mac-m1.yaml  job-build-raspberry-pi.yaml  job-changelog-check.yml  job-jira-issues.yml  job-sonarcloud.yml  job-test-linux-centos.yml  job-test-linux-debian.yml  job-test-linux-fedora.yml  job-test-linux-ubuntu.yml  job-test-mac.yml  job-test-raspberry-pi.yaml  job-test-windows.yml
cmake/: corrosion_cxx.cmake
debian/: control  rules
ext/license-parser/: CMakeLists.txt  Cargo.toml
ext/license-parser/src/: lib.rs
scripts/: buildLinuxDeb.sh
src/cmd/synergyc/: CMakeLists.txt
src/cmd/synergys/: CMakeLists.txt
src/cmd/syntool/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/src/: LicenseManager.cpp
src/lib/shared/: CMakeLists.txt  SerialKey.cpp
